# GrowPod

./: .gitignore  README.md  calendar_scheduler.py  hydroponics_console.py  partitions.csv  run_server.bat  scheduler.py  sdkconfig  sdkconfig.old  sdkconfig.safe.esp32_s3
main/: CMakeLists.txt  generate_certs.bat  idf_component.yml  main.c  peripheral_power.c  peripheral_power.h
main/Networking/: wifi_manager.c  wifi_manager.h
main/actuator_control/: actuator_control.c  actuator_control.h  i2c_motor_driver.c  i2c_motor_driver.h
main/control_logic/: control_logic.c  control_logic.h
main/display/: CMakeLists.txt  display.c  display.h
main/filesystem/: config_manager.c  config_manager.h  filesystem_manager.c  filesystem_manager.h
main/flowmeter/: flowmeter_control.c  flowmeter_control.h
main/https_server/: https_server.c  https_server.h
main/ina260/: ina260.c  ina260.h
main/ina_power_monitor/: ina219.c  ina219.h  ina260.c  ina260.h  power_monitor_HAL.c  power_monitor_HAL.h
main/pod_state/: pod_state.c  pod_state.h
main/sensors/: contact_sensor.c  contact_sensor.h  distance_sensor.c  distance_sensor.h  fdc1004_distance_sensor.c  fdc1004_distance_sensor.h  flowmeter_control.c  i2c_scanner.c  i2c_scanner.h  sensor_api.c  sensor_api.h  sensor_config.c  sensor_config.h  sensor_logger.c  sensor_logger.h  sensor_manager.c  sensor_manager.h  sht45_sensor.c  sht45_sensor.h  tsl2591_sensor.c  tsl2591_sensor.h
main/uart_comm/: uart_comm.c  uart_comm.h
partition_table/: partitionTable.csv
plant_profiles/: README.md  micro_tom_tomato.json
